# crisp-py

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: dependabot.yml  workflows-status.md
.github/workflows/: README.md  badges.yml  benchmark.yml  ci.yml  dependency-update.yml  format-check.yml  release.yml  security.yml  type-check.yml
crisp-py/: .gitignore  LICENSE
crisp-py/crisp/: __init__.py  config.py  constants.py
crisp-py/crisp/clustering/: __init__.py  base.py  fixed.py  kmeans.py  relative.py
crisp-py/crisp/evaluation/: __init__.py  beir.py  metrics.py
crisp-py/crisp/losses/: __init__.py  chamfer.py  contrastive.py
crisp-py/crisp/pruning/: __init__.py  base.py  spacing.py  tail.py
crisp-py/crisp/utils/: __init__.py  device.py  logging.py
crisp-py/examples/: example.py
crisp-py/tests/: conftest.py  test_utils.py
crisp-py/tests/integration/: test_beir_evaluation.py  test_end_to_end.py
crisp-py/tests/unit/: test_clustering.py  test_config.py  test_losses.py  test_metrics.py  test_models.py  test_pruning.py
docs/: CRISP.md  PIPELINE_README.md
examples/: crisp_demo.py  demo_crisp_vs_posthoc.py  run_pipeline.sh  train_crisp.py
